# GraniteX

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.claude/: settings.local.json
docs/: AGENT_CRITIQUE.md  AGENT_VISION.md  ARCHITECTURE.md  CHANGELOG.md  DECISIONS.md  DSL_DESIGN.md  IDEAS.md  LEARNINGS.md  MILESTONES.md  PLAN_SKETCH.md  PROBLEMS.md  RESEARCH.md  RESEARCH_GIZMO.md  RESEARCH_SELECTION.md  TODO.md  TOOLING.md  VISION.md
src/: app.rs  commands.rs  construction.rs  export.rs  main.rs  project.rs  ui.rs
src/app/: input.rs  measure.rs  mesh_ops.rs  mod.rs  sketch_ops.rs
src/brep/: mod.rs  primitives.rs  tessellate.rs
src/import/: mod.rs  obj.rs  stl.rs
src/renderer/: camera.rs  construction_renderer.rs  edges.wgsl  gizmo.rs  gizmo.wgsl  gpu_state.rs  grid.rs  grid.wgsl  mesh.rs  mod.rs  picking.rs  pipeline.rs  preview.rs  preview.wgsl  shader.wgsl  sketch.wgsl  sketch_renderer.rs  transform_gizmo.rs  transform_gizmo.wgsl  vertex.rs
src/renderer/mesh/: mod.rs  ops.rs  smooth.rs
src/sketch/: entities.rs  mod.rs  plane.rs  region.rs
